Fix footer logo styles and add spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ img {
     color: #4D5AE5;
 }
 
-.logo-footer {
+.footer-logo {
     font-family: 'Raleway', sans-serif;
     color: #F4F4FD;
     font-size: 18px;
